# Zephyr_active_object

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.MIT  README.md  prj.conf
src/: main.cpp
src/application/: app_main.cpp  app_main.h
src/control_thread/: control_thread.cpp  control_thread.h
src/event/: sys_event.cpp  sys_event.h
